# artifactory-retention

./: .gitignore  Dockerfile  README.md  kube-pod.yaml  makefile  pyproject.toml  setup.py
artretention/: artret.py
artretention/common/: artifactory.py  core.py
